<?xml version="1.0"?>
<package format="2">
  <name>threading_model</name>
  <version>0.0.0</version>
  <description>The threading_model package</description>

  <maintainer email="sv@todo.todo">sv</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

</package>
